@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-acmd.py tc submit-tag $@
+acmd.py tc submit-tag "$@"
